# freqepid

./: .Rhistory  Coverage study - GB, nonparametric simulation, normal.ipynb  Coverage study - GB, parametric simulation, normal.ipynb  Exp. Analysis - GB, negative binomial.ipynb  Exp. Analysis - GB, nonparametric bootstrap, zero s_eta, half.ipynb  Exp. Analysis - GB, parametric bootstrap, negative binomial.ipynb  Exp. Analysis - GB, parametric bootstrap, zero s_eta.ipynb  Exp. Analysis - delphi, ny, adj_2, iv_5.ipynb  Exp. Analysis - delphi, pa, EDA.ipynb  Exp. Analysis - delphi, pa, adj_2, iv_5.ipynb  Exp. Analysis - delphi, pa, negative binomial.ipynb  LICENSE  README.md  Simulation Study - poisson-poisson.ipynb  Simulation Study - zero s_eta.ipynb  pyproject.toml  setup.py
data/: simulation_ebcr_0.feather  simulation_randinf_0.feather  simulation_randinf_4.feather
example/: Coverage study - GB, nonparametric simulation, negative binomial.ipynb  Coverage study - GB, parametric simulation, negative binomial.ipynb  Exp. Analysis - GB, nonparametric bootstrap, negative binomial.ipynb  Exp. Analysis - GB, nonparametric bootstrap, zero s_eta.ipynb  Exp. Analysis - GB, parametric bootstrap, zero s_eta, half.ipynb  Exp. Analysis - GB, zero s_eta, half.ipynb  Exp. Analysis - GB, zero s_eta.ipynb  Exp. Analysis - delphi, EBCI, adj_2, iv_5.ipynb  Exp. Analysis - delphi, EBCR, adj_2, iv_5.ipynb  Exp. Analysis - delphi, adjust weekend effects.ipynb  Exp. Analysis - delphi, ny, adj_2, iv_5, Gaussian.ipynb  Exp. Analysis - epidemia, EBCI on R.ipynb  (+3 more)
freqepid.egg-info/: PKG-INFO  (+1 more)
(+66 files in other folders)
